# ai-marketing

./: .gitignore  Dockerfile  README.md  Readme.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py  models.py  parser.py  strategy_generator.py
